// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducer CHANGE_HASHTAGS 1`] = `
Object {
  "feature": Object {
    "active": [Function],
  },
  "hashtags": "#FOO",
  "healthy": false,
  "items": Array [
    Object {
      "length": 12,
      "tweet": "bar #FOO 1/1",
    },
  ],
  "linefeed": ";;",
  "source": "bar",
  "userId": null,
}
`;

exports[`reducer CHANGE_LINEFEED 1`] = `
Object {
  "feature": Object {
    "active": [Function],
  },
  "hashtags": "",
  "healthy": false,
  "items": Array [
    Object {
      "length": 38,
      "tweet": "Can you can a can [..] as a canner 1/2",
    },
    Object {
      "length": 18,
      "tweet": "can can a can? 2/2",
    },
  ],
  "linefeed": "||",
  "source": "Can you can a can [..] as a canner || can can a can?",
  "userId": null,
}
`;

exports[`reducer CHANGE_SOURCE 1`] = `
Object {
  "feature": Object {
    "active": [Function],
  },
  "hashtags": "",
  "healthy": false,
  "items": Array [
    Object {
      "length": 7,
      "tweet": "bar 1/1",
    },
  ],
  "linefeed": ";;",
  "source": "bar",
  "userId": null,
}
`;

exports[`reducer RESET_TWEETSTORM 1`] = `
Object {
  "feature": undefined,
  "hashtags": "",
  "healthy": true,
  "items": Array [],
  "linefeed": ";;",
  "source": "",
  "userId": "twitter|1183836409850814464",
}
`;

exports[`reducer SET_HEALTHY 1`] = `
Object {
  "feature": Object {
    "active": [Function],
  },
  "hashtags": "",
  "healthy": true,
  "items": Array [],
  "linefeed": ";;",
  "source": "",
  "userId": null,
}
`;

exports[`reducer SET_USER_ID 1`] = `
Object {
  "feature": Object {
    "active": [Function],
  },
  "hashtags": "",
  "healthy": false,
  "items": Array [],
  "linefeed": ";;",
  "source": "",
  "userId": "twitter|1183836409850814464",
}
`;

exports[`reducer default 1`] = `
Object {
  "feature": undefined,
  "hashtags": "",
  "healthy": false,
  "items": Array [],
  "linefeed": ";;",
  "source": "",
  "userId": null,
}
`;
